<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Signup">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="279dp"
        android:layout_height="162dp"
        android:layout_marginTop="28dp"
        android:background="#FBF5E6"
        android:foregroundTint="#131111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera">

    </ImageView>

    <EditText
        android:autofillHints="name"
        android:id="@+id/nameText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />

    <EditText
        android:autofillHints="username"
        android:id="@+id/surnameText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/enter_your_surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <EditText
        android:autofillHints="creditCardExpirationDate"
        android:id="@+id/entryDateText"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:hint="@string/_12_12_12"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:autofillHints="creditCardExpirationDate"
        android:id="@+id/quitDateText"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/_12_12_12"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/entry_date"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/entryDateText"
        app:layout_constraintTop_toBottomOf="@+id/surnameText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="36dp"
        android:text="@string/quit_date"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/quitDateText"
        app:layout_constraintTop_toBottomOf="@+id/surnameText" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/signupEmailText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryDateText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailText" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="105dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/back"
        android:layout_width="105dp"
        android:layout_height="53dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="19dp"
        android:text="go back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>